# backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  dependencies.py  enums.py  main.py  models.py  notifications.py  realtime.py  schemas.py  service.py  station_catalog.py
app/api/: auth.py  stations.py  support_requests.py  transit.py
app/data/: airport_railroad_accessible_restrooms_20250630.csv  facilities_seed.json  korail_station_lift_facilities_20230101.csv  station_arrival_catalog.json
app/services/: transit_service.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_stations_api.py  test_support_requests_api.py
tests/unit/: test_transit_service.py
